--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 authors = ["Mark Chandler <mark.allen.chandler@gmail.com>"]
 
 [dependencies]
+regex = "0.2.1"
+lazy_static = "0.1.*"
